# pytcnapi

./: .gitlab-ci.yml  README.md  pyproject.toml
annotations/: authz_pb2.py  authz_pb2.pyi
annotations/perms/: license_pb2.py  license_pb2.pyi  tcn_pb2.py  tcn_pb2.pyi
api/commons/: acd_pb2.py  acd_pb2.pyi  agent_session_pb2.py  agent_session_pb2.pyi  agent_training_pb2.py  agent_training_pb2.pyi  ana_charts_pb2.py  ana_charts_pb2.pyi  ana_pb2.py  ana_pb2.pyi  asm_pb2.py  asm_pb2.pyi  bireportgenerator_pb2.py  bireportgenerator_pb2.pyi  broadcasts_pb2.py  broadcasts_pb2.pyi  call_pb2.py  call_pb2.pyi  callmonitor_pb2.py  callmonitor_pb2.pyi  cbs_pb2.py  cbs_pb2.pyi  chat_pb2.py  chat_pb2.pyi  classifier_pb2.py  classifier_pb2.pyi  communication_pb2.py  communication_pb2.pyi  compliance_pb2.py  compliance_pb2.pyi  contactmanager_pb2.py  contactmanager_pb2.pyi  country_pb2.py  country_pb2.pyi  dashboards_pb2.py  dashboards_pb2.pyi  datalake_pb2.py  datalake_pb2.pyi  delivery_pb2.py  delivery_pb2.pyi  (+62 more)
api/v0alpha/: acd_pb2.py  acd_pb2.pyi  acd_pb2_grpc.py  ana_pb2.py  ana_pb2.pyi  ana_pb2_grpc.py  callqueue_pb2.py  callqueue_pb2.pyi  callqueue_pb2_grpc.py  cbs_pb2.py  cbs_pb2.pyi  cbs_pb2_grpc.py  cfg_pb2.py  cfg_pb2.pyi  cfg_pb2_grpc.py  compliance_pb2.py  compliance_pb2.pyi  compliance_pb2_grpc.py  dashboards_pb2.py  dashboards_pb2.pyi  dashboards_pb2_grpc.py  emailapi_pb2.py  emailapi_pb2_grpc.py  fts_pb2.py  fts_pb2.pyi  fts_pb2_grpc.py  learn_pb2.py  learn_pb2.pyi  learn_pb2_grpc.py  lms_pb2.py  lms_pb2.pyi  lms_pb2_grpc.py  omniapi_pb2.py  omniapi_pb2.pyi  org_pb2.py  (+18 more)
(+604 files in other folders)
