[tool.poetry]
name = "pytcnapi"
version = "1.5.3"
description = ""
authors = ["Florin Stan <tom@tcn.com>"]
readme = "README.md"
packages = [
    { include = "api/**/*" },
    { include = "annotations/**/*" },
    { include = "google/**/*" },
    { include = "permissions/**/*" },
]

[tool.poetry.dependencies]
python = "^3.8"
grpcio = "^1.54.0"
grpcio-tools = "^1.54.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
