[tool.poetry]
name = "pytcnapi"
version = "1.5.3"
description = ""
authors = ["Florin Stan <tom@tcn.com>"]
readme = "README.md"
packages = [
    { include = "api/**/*" },
    { include = "annotations/**/*" },
    { include = "google/**/*" },
    { include = "permissions/**/*" },
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
